// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputeStatusChip renders charge_refunded status 1`] = `
<Chip
  message="Charge refunded"
  type="light"
/>
`;

exports[`DisputeStatusChip renders default appearance if status is unrecognized 1`] = `
<Chip
  message="mock_status"
  type="light"
/>
`;

exports[`DisputeStatusChip renders lost status 1`] = `
<Chip
  message="Lost"
  type="light"
/>
`;

exports[`DisputeStatusChip renders needs_response status 1`] = `
<Link
  href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fevidence&id=dp_mock"
  type="wc-admin"
>
  <Chip
    message="Needs response"
    type="primary"
  />
</Link>
`;

exports[`DisputeStatusChip renders under_review status 1`] = `
<Chip
  message="Under review"
  type="light"
/>
`;

exports[`DisputeStatusChip renders warning_closed status 1`] = `
<Chip
  message="Inquiry: Closed"
  type="light"
/>
`;

exports[`DisputeStatusChip renders warning_needs_response status 1`] = `
<Link
  href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fevidence&id=dp_mock"
  type="wc-admin"
>
  <Chip
    message="Inquiry: Needs response"
    type="primary"
  />
</Link>
`;

exports[`DisputeStatusChip renders warning_under_review status 1`] = `
<Chip
  message="Inquiry: Under review"
  type="light"
/>
`;

exports[`DisputeStatusChip renders won status 1`] = `
<Chip
  message="Won"
  type="light"
/>
`;
